[gd_scene load_steps=5 format=3 uid="uid://c64ymag5ig3yf"]

[ext_resource type="Script" path="res://scenes/playlist_menu/playlist_menu.gd" id="1_hcqle"]
[ext_resource type="PackedScene" uid="uid://d30ah5swxo0o6" path="res://scenes/components/header/header.tscn" id="2_p53vq"]
[ext_resource type="Texture2D" uid="uid://hu0ik7wlnm1d" path="res://assets/design/arrow_enabled.png" id="3_k2pol"]
[ext_resource type="Texture2D" uid="uid://c2ws37mfqd6ka" path="res://assets/design/arrow_disabled.png" id="4_whg3c"]

[node name="PlaylistMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hcqle")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="PlaylistMenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 540.0
offset_bottom = 960.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" parent="PlaylistMenuContainer" instance=ExtResource("2_p53vq")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PlaylistMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="PlaylistContainer" type="VBoxContainer" parent="PlaylistMenuContainer/MarginContainer"]
layout_mode = 2

[node name="Footer" type="MarginContainer" parent="PlaylistMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="NavigationButtonContainer" type="HBoxContainer" parent="PlaylistMenuContainer/Footer"]
layout_mode = 2

[node name="PreviousButton" type="TextureButton" parent="PlaylistMenuContainer/Footer/NavigationButtonContainer"]
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("3_k2pol")
texture_disabled = ExtResource("4_whg3c")
flip_h = true

[node name="NextButton" type="TextureButton" parent="PlaylistMenuContainer/Footer/NavigationButtonContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("3_k2pol")
texture_disabled = ExtResource("4_whg3c")

[connection signal="update_playlist" from="PlaylistMenuContainer/Header" to="." method="_on_update_playlist"]
[connection signal="pressed" from="PlaylistMenuContainer/Footer/NavigationButtonContainer/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="PlaylistMenuContainer/Footer/NavigationButtonContainer/NextButton" to="." method="_on_next_button_pressed"]
